--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <!-- header -->
     <header class="header">
       <div class="container">
+        <!-- header top -->
         <div class="header-top">
           <!-- logo -->
           <a href="./"><img src="./img/Logo.svg" alt="" class="logo" /></a>
@@ -121,6 +122,37 @@
             <a href="#!" class="btn header__action--signup">Sign up</a>
           </div>
         </div>
+        <!-- hero -->
+        <section class="hero">
+          <!-- hero left -->
+          <section class="hero__content">
+            <h1 class="hero__heading">Exceptional dental care for all ages.</h1>
+            <p class="hero__desc">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+            <div class="hero__row">
+              <a href="#!" class="btn">Book Online</a>
+              <div class="hero__phone">or call (123) 456-7890</div>
+            </div>
+          </section>
+
+          <!-- hero right -->
+          <div class="hero__media">
+            <figure class="hero__images">
+              <img
+                src="./img/hero-img1.jpg"
+                alt=""
+                class="hero__images--large"
+              />
+              <img
+                src="./img/hero-img2.jpg"
+                alt=""
+                class="hero__images--small"
+              />
+            </figure>
+          </div>
+        </section>
       </div>
     </header>
   </body>
