--- a/index.html
+++ b/index.html
@@ -293,5 +293,28 @@
         </div>
       </div>
     </section>
+    <!-- about -->
+    <section class="about">
+      <div class="container">
+        <div class="about-row">
+          <!-- about left -->
+          <div class="about__media">
+            <figure class="about__img">
+              <img src="./img/about.jpg" alt="" class="about__img--big" />
+              <img src="./img/about.jpg" alt="" class="about__img--small" />
+            </figure>
+          </div>
+          <!-- about right -->
+          <section class="about-content">
+            <h2 class="section-heading">Take back your smile with shine.</h2>
+            <p class="section-desc">
+              If you’re missing multiple teeth due to decay, injury, or the
+              natural aging process, dentures might be the perfect solution.
+            </p>
+            <a href="#!" class="btn about-content__btn">Learn More</a>
+          </section>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
