--- a/index.html
+++ b/index.html
@@ -316,5 +316,86 @@
         </div>
       </div>
     </section>
+    <!-- team  -->
+    <section class="team">
+      <div class="container">
+        <div class="team-header">
+          <h2 class="section-heading">Our virtual dentist</h2>
+          <a href="#!" class="btn team__cta">Meet our dentist</a>
+        </div>
+        <div class="team__list">
+          <!-- item 1 -->
+          <article class="team-item">
+            <div class="team-item__img">
+              <img src="./img/doctor1.png" alt="" class="team-item__theme" />
+            </div>
+            <h3 class="team-item__name">Dr. Essence Page</h3>
+            <p class="team-item__desc">DDS, California - Linda University</p>
+          </article>
+          <!-- item 2 -->
+          <article class="team-item">
+            <div class="team-item__img">
+              <img src="./img/doctor2.png" alt="" class="team-item__theme" />
+            </div>
+            <h3 class="team-item__name">Dr. Essence Page</h3>
+            <p class="team-item__desc">DDS, California - Linda University</p>
+          </article>
+          <!-- item 3 -->
+          <article class="team-item">
+            <div class="team-item__img">
+              <img src="./img/doctor3.png" alt="" class="team-item__theme" />
+            </div>
+            <h3 class="team-item__name">Dr. Essence Page</h3>
+            <p class="team-item__desc">DDS, California - Linda University</p>
+          </article>
+          <!-- item 4 -->
+          <article class="team-item">
+            <div class="team-item__img">
+              <img src="./img/doctor4.png" alt="" class="team-item__theme" />
+            </div>
+            <h3 class="team-item__name">Dr. Essence Page</h3>
+            <p class="team-item__desc">DDS, California - Linda University</p>
+          </article>
+        </div>
+        <div class="control team__control">
+          <!-- previous -->
+          <button class="control__btn">
+            <svg
+              class="control__icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="6"
+              height="12"
+              viewBox="0 0 6 12"
+              fill="none"
+            >
+              <path
+                d="M5.5 1L0.5 6L5.5 11"
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+          <!--next -->
+          <button class="control__btn">
+            <svg
+              class="control__icon control__icon--next"
+              xmlns="http://www.w3.org/2000/svg"
+              width="6"
+              height="12"
+              viewBox="0 0 6 12"
+              fill="none"
+            >
+              <path
+                d="M5.5 1L0.5 6L5.5 11"
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
