p9 code phan install mobile

--- a/index.html
+++ b/index.html
@@ -397,5 +397,42 @@
         </div>
       </div>
     </section>
+    <!-- install mobile -->
+    <section class="install">
+      <div class="container">
+        <div class="install__inner">
+          <!-- install left -->
+          <figure>
+            <img src="./img/Phone.png" alt="" class="install__img" />
+          </figure>
+          <!-- install right -->
+          <section class="install__content">
+            <h2 class="section-heading install__heading">
+              Take back your smile with dentures
+            </h2>
+            <p class="install__desc">
+              If you’re missing multiple teeth due to decay, injury, or the
+              natural aging process, dentures might be the perfect solution.
+            </p>
+            <div class="install__row">
+              <a href="#!">
+                <img
+                  src="./img/Google Play.svg"
+                  alt=""
+                  class="install__btn--img"
+                />
+              </a>
+              <a href="#!">
+                <img
+                  src="./img/App Store.svg"
+                  alt=""
+                  class="install__btn--img"
+                />
+              </a>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
