--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <!-- add favicon -->
     <link
       rel="apple-touch-icon"
@@ -90,8 +94,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sora:wght@100..800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <title>Shine smile</title>
   </head>
   <body >
@@ -101,7 +107,7 @@
         <!-- header top -->
         <div class="header-top">
           <!-- logo -->
-          <a href="./"><img src="./img/Logo.svg" alt="" class="logo" /></a>
+          <a href="./"><img src="./img/Logo.svg" alt="" class="logo header__logo" /></a>
           <!-- nav -->
           <nav class="navbar">
             <ul class="nav__list">
@@ -158,6 +164,22 @@
         </section>
       </div>
     </header>
+
+    <!-- tablet mobile header -->
+    <div class="mobile-header">
+      <input type="checkbox" name="menu-checkbox" id="menu-checkbox" hidden>
+      <!-- tablet/mobile menu  -->
+      <label for="menu-checkbox">
+          <svg class="menu-header__icon"
+                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" >
+            <path fill="currentColor" d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/>
+          </svg>
+      </label>
+      <!-- over late  -->
+       <label for="menu-checkbox" class="menu-overlate"></label>
+    </div>
+      
+
     <!-- main -->
     <main>
       <section class="service">
@@ -170,7 +192,7 @@
           <div class="service__row">
             <!-- service left -->
             <figure>
-              <img src="./img/service.jpg" alt="" class="service__img" />
+              <img src="./img/service.jpg" alt="" class="service__img"  />
             </figure>
             <!-- service right -->
             <div class="service__list">
@@ -257,7 +279,7 @@
     <!-- work -->
     <section class="work">
       <div class="container">
-        <h2 class="section-heading">How it works</h2>
+        <h2 class="section-heading  " data-aos="animate__backInDown" >How it works</h2>
         <p class="section-desc work__desc">
           Exceptional dental care for all ages. Your great smile begins with a
           great dentist.
@@ -323,7 +345,7 @@
     <section class="team">
       <div class="container">
         <div class="team-header">
-          <h2 class="section-heading">Our virtual dentist</h2>
+          <h2 class="section-heading " >Our virtual dentist</h2>
           <a href="#!" class="btn team__cta">Meet our dentist</a>
         </div>
         <div class="team__list">
@@ -614,6 +636,13 @@
         <p class="footer__copyright--text">2021 GDN. Copyright and All rights reserved.</p>
       </div>
       </section>
-      
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+  useClassNames: true,
+  initClassName: false,
+  animatedClassName: 'animate__animated',
+});
+  </script>
   </body>
 </html>
