--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <a href="./"><img src="./img/Logo.svg" alt="" class="logo header__logo" /></a>
           <!-- nav -->
           <nav class="navbar">
-            <ul class="nav__list">
+            <ul class="nav__list" id="navbar__list--pc">
               <div class="navbar__item">
                 <a href="#!" class="navbar__link navbar__link--active">Home</a>
               </div>
@@ -177,6 +177,24 @@
       </label>
       <!-- over late  -->
        <label for="menu-checkbox" class="menu-overlate"></label>
+      <div class="menu-drawer">
+        <!-- menu top -->
+         <div class="menu-drawer__top">
+          <!-- logo -->
+            <a href="./"><img src="./img/Logo.svg" alt="" class="logo " /></a>
+           <!-- icon close -->
+          <label for="menu-checkbox"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="close__menu"><path fill="currentColor" d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z"/></svg></label>
+         </div>
+        <!-- nav for mobile -->
+        <ul id="navbar__list--mobile"></ul>
+        <!-- copy navbar -->
+         <script>
+            const navPc = document.querySelector("#navbar__list--pc");
+            const navMobile = document.querySelector("#navbar__list--mobile");
+            // sao chep 
+            navMobile.innerHTML=navPc.innerHTML;
+         </script>
+      </div>
     </div>
       
 
