--- a/index.html
+++ b/index.html
@@ -194,6 +194,18 @@
             // sao chep 
             navMobile.innerHTML=navPc.innerHTML;
          </script>
+         <!-- separate ngan cach -->
+          <div class="separate">
+            <!-- cta action -->
+             <div class="show_on_mobile">
+                <div class="navbar__item">
+                  <a href="#!" class="navbar__link">Log In</a>
+                </div>
+                <div class="navbar__item">
+                  <a href="#!" class="navbar__link">Sign up</a>
+                </div>
+             </div>
+          </div>
       </div>
     </div>
       
